[project]
name = "the-research-drift-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "deepagents>=0.3.6",
    "langchain-mcp-adapters>=0.2.1",
    "tavily>=1.1.0",
    "mcp[cli]>=1.25.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.7",
    "semanticscholar>=0.11.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "camelot-py>=1.0.9",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
]
